--- a/src/App/App.csproj
+++ b/src/App/App.csproj
@@ -7,4 +7,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="DevJonny.InteractiveCli" Version="2.1.0" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
+    </ItemGroup>
+
 </Project>
