feat: Adds Day Four code

--- a/test/Unit.Tests/Unit.Tests.csproj
+++ b/test/Unit.Tests/Unit.Tests.csproj
@@ -22,4 +22,8 @@
       <ProjectReference Include="..\..\src\App\App.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="Files\*.*" CopyToOutputDirectory="Always" />
+    </ItemGroup>
+
 </Project>
