--- a/src/App/App.csproj
+++ b/src/App/App.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
       <PackageReference Include="DevJonny.InteractiveCli" Version="2.1.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
+      <PackageReference Include="xunit.abstractions" Version="2.0.3" />
     </ItemGroup>
 
 </Project>
